--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
     <groupId>groupId</groupId>
     <artifactId>SimpleWebApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <parent>
@@ -49,14 +51,11 @@
     </dependencies>
 
     <build>
+        <finalName>SimpleWebApp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
